--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "multer": "^1.4.2",
+    "pug": "^2.0.4",
+    "xlsx": "^0.15.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
