--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formidable": "^1.2.1",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
+    "jquery": "^3.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "pug": "^2.0.4",
